# aerie

./: .gitignore  .pre-commit-config.yaml  :memory  CONTRIBUTING.rst  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  testing.yml
aerie/: __init__.py  base.py  behaviors.py  collections.py  connection.py  database-.py  database.py  exceptions.py  expr.py  migrations.py  models.py  paginator.py  pool.py  protocols.py  queries.py  query.py  results.py  schema.py  session.py  terms.py  url.py  utils.py
aerie/adapters-/: base.py  postgresql.py  sql.py
aerie/drivers/: postgresql.py  sqlite.py
aerie/drivers/base/: __init__.py  connection.py  driver.py  grammar.py
aerie/drivers/postgresql/: __init__.py  connection.py  driver.py  grammar.py
aerie/drivers/sqlite/: __init__.py  connection.py  driver.py  grammar.py
aerie/schema/: builder.py  operations.py  reflection.py  structure.py  types.py
examples/: fast_api.py  main.py  orm.py  pagination.py  queries.py  query.py  raw_sql.py  session.py  tables.py
examples/migrations/: 202011250213_create_users.py
specs/: repos.md
tests/: conftest.py  tables.py  test_builder_select.py  test_collection.py  test_database.py  test_models.py  test_pagination.py  test_pool.py  test_select.py  test_session.py  test_url.py
tests/adapters/: test_postgres.py
tests/driver/base/: test_grammar.py
tests/drivers/: test_sqlite.py
tests/schema/: test_builder.py
tests/test_database/: test_database.py  test_fetch_all.py  test_fetch_one.py  test_fetch_one_or_none.py  test_scalar_one.py  test_scalar_one_or_none.py  test_scalars.py
tests/test_session/: test_pagination.py  test_session.py
