[tool.poetry]
name = "aerie"
version = "0.1.0"
description = ""
authors = ["alex.oleshkevich <alex.oleshkevich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiosqlite = { version = "^0.16.0", optional = true }
asyncpg = { version = "^0.21.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-sugar = "^0.9.4"
pytest-asyncio = "^0.14.0"
pytest-coverage = "^0.0"
black = "^20.8b1"
mypy = "^0.790"

[tool.poetry.extras]
pgsql = ["asyncpg"]
sqlite = ["aiosqlite"]
full = ["asyncpg", "aiosqlite"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
